@@ -8,7 +8,9 @@ OpenLDAP 2.1.18 Engineering
 	Fixed slapd ACL group DN crash (ITS#2467)
 	Fixed slapd substring normalization bug (ITS#2468)
 	Fixed back-bdb search filter empty value bug (ITS#2453)
+	Fixed back-bdb filter index computed/undefined bugs (ITS#2449)
 	Fixed SASL interactive free bug (ITS#2423)
+	Fixed libldap ldap_host_connected_to portability bug (ITS#2459)
 	Fixed liblber multi-value decode bug (ITS#2458)
 	Fixed liblber over read bug (ITS#2465)
 	Fixed ldappasswd -y support (ITS#2441)
